# rattil

./: PRIVACY_POLICY.md  README.md  mprocs.yaml  package.json  skills-lock.json
.github/workflows/: appstore.yml  testflight.yml
apps/api/: Dockerfile  package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/routers/: tasmi.py  tts.py
apps/api/app/services/: whisper_service.py
apps/api/src/: index.ts
apps/mobile/: README.md  analysis_options.yaml  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/assets/db/: quran.db  quran.db-shm
apps/mobile/assets/locales/: am.json  ar.json  az.json  bn.json  bs.json  cs.json  de.json  en.json  es.json  fa.json  fr.json  ha.json  hi.json  id.json  it.json  ja.json  kk.json  ko.json  ku.json  ky.json  ms.json  nl.json  no.json  pl.json  ps.json  pt.json  ro.json  ru.json  sd.json  so.json  sv.json  sw.json  ta.json  tg.json  th.json  tl.json  tr.json  uk.json  ur.json  uz.json  (+4 more)
apps/mobile/ios/: ExportOptions.plist  Podfile
apps/mobile/ios/QuranAyahWidget/: QuranAyahWidget.swift
apps/mobile/ios/QuranAyahWidgetExtension/: QuranAyahWidgetExtension.swift
apps/mobile/ios/Runner/: Info.plist  Runner.entitlements
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: app.dart  main.dart
apps/mobile/lib/providers/: khatmah_provider.dart  khatmah_provider.g.dart  (+10 more)
apps/mobile/linux/: CMakeLists.txt
apps/mobile/web/: index.html  manifest.json
apps/tasmi/: app.py
apps/web/: Dockerfile  package.json
apps/web/messages/: ar.json  en.json
scripts/: build-db.ts
(+114 files in other folders)
