[project]
name = "rattil-api"
version = "0.1.0"
description = "Rattil API — Quran Tasmi' transcription service"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "librosa>=0.11.0",
    "python-multipart>=0.0.22",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "edge-tts>=6.1.0",
]
